--- a/src/Components/Herosection/Herosection.css
+++ b/src/Components/Herosection/Herosection.css
@@ -6,7 +6,6 @@
   height: 100%;
   background-color: #0009;
   z-index: 7;
-  display: none;
 }
 
 .searchbar {
@@ -22,7 +21,7 @@
   padding: 10px;
   font-size: 16px;
   margin: auto;
-  display: block;
+  /* display: block; */
   background-color: var(--primary-white);
   border-radius: 5px 5px 0 0;
 }
