--- a/src/Components/Herosection/Herosection.css
+++ b/src/Components/Herosection/Herosection.css
@@ -26,7 +26,7 @@
   border-radius: 5px 5px 0 0;
 }
 
-.recipe-list {
+#recipeList {
   background-color: #f9f9f9;
   box-shadow: 0 8px 16px 0 #0003;
   z-index: 1;
