--- a/src/Components/Mealmodal/Mealmodal.css
+++ b/src/Components/Mealmodal/Mealmodal.css
@@ -1,5 +1,5 @@
 .modal {
-  display: none;
+  /* display: none; */
   position: fixed;
   z-index: 7;
   left: 0;
@@ -11,7 +11,7 @@
 
   .modal-content {
     display: flex;
-    flex-direction: column;,. 
+    flex-direction: column; 
     justify-content: space-between;
     gap: 10px;
     background-color: #fefefe;
@@ -40,6 +40,7 @@
 
     .imgingredientsme {
       display: flex;
+      flex-direction: column;
       justify-content: space-around;
     }
 
