styled all the components work on the favorite modal close button added a read me

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ button {
   height: fit-content;
   padding: 10px;
   color: var(--primary-white);
-  background-color: var(--primary-orange);
+  background-color: #fe5722;
   cursor: pointer;
   border: none;
   border-radius: 5px;
