--- a/src/Components/Herosection/Herosection.css
+++ b/src/Components/Herosection/Herosection.css
@@ -59,6 +59,7 @@
   background-repeat: no-repeat;
   background-color: var(--primary-pink);
   width: 100%;
+  max-width: 100vw;
 
   .content-holder {
     width: var(--app-mx-width);
