--- a/src/Components/Herosection/Herosection.css
+++ b/src/Components/Herosection/Herosection.css
@@ -1,3 +1,11 @@
+:root {
+  --primary-pink: #fff3f0;
+  --primary-white: #f2f2f2;
+  --primary-orange: #fe5722;
+  --primary-blue: #272d36;
+
+  --app-mx-width: min(100vw, 3000px);
+}
 .overlay {
   position: fixed;
   top: 0;
@@ -59,10 +67,10 @@
   background-repeat: no-repeat;
   background-color: var(--primary-pink);
   width: 100%;
-  max-width: 100vw;
 
   .content-holder {
     width: var(--app-mx-width);
+
     margin: 0 auto;
     min-height: 100vh;
     display: flex;
