--- a/src/Components/Favorite/Favorites.css
+++ b/src/Components/Favorite/Favorites.css
@@ -11,7 +11,9 @@
   display: flex;
   justify-content: space-around;
   gap: 1rem;
-  max-width: 90vw;
+  width: 100%;
+  /* max-width: 100vw; */
+  padding: 2px 10px;
   flex-wrap: wrap;
 }
 .favorite {
