--- a/src/Components/Herosection/Herosection.css
+++ b/src/Components/Herosection/Herosection.css
@@ -3,7 +3,6 @@
   --primary-white: #f2f2f2;
   --primary-orange: #fe5722;
   --primary-blue: #272d36;
-
   --app-mx-width: min(100vw, 3000px);
 }
 .overlay {
@@ -29,7 +28,6 @@
   padding: 10px;
   font-size: 16px;
   margin: auto;
-  /* display: block; */
   background-color: var(--primary-white);
   border-radius: 5px 5px 0 0;
 }
@@ -67,10 +65,10 @@
   background-repeat: no-repeat;
   background-color: var(--primary-pink);
   width: 100%;
+  padding: 2px 10px;
 
   .content-holder {
     width: var(--app-mx-width);
-
     margin: 0 auto;
     min-height: 100vh;
     display: flex;
