--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,8 +7,8 @@
   left: 0;
   z-index: 5;
   width: 100%;
-  max-width: 100vw;
-  padding: 0 10px;
+  /* max-width: 100vw; */
+  padding: 2px 10px;
 
   .nav-content {
     display: flex;
