adjuxted color to white

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ img {
 
 body {
   width: 100vw;
+  color: #272d36;
   background-color: aqua;
   font-family: Arial, sans-serif;
   height: fit-content;
