--- a/src/Components/Mealmodal/Mealmodal.css
+++ b/src/Components/Mealmodal/Mealmodal.css
@@ -12,7 +12,6 @@
   .modal-content {
     display: flex;
     flex-direction: column;
-    gap: 5px;
     background-color: #fefefe;
     margin: 0 auto;
     /* padding: 20px; */
@@ -20,8 +19,8 @@
     width: 50%;
     font-family: "Playfair Display", serif;
     font-size: 14px;
-    height: 600px;
-    overflow-y: auto;
+    height: 100%;
+    /* overflow-y: auto; */
 
     .meal-image {
       object-fit: contain;
